src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_help_austere.snap
---
source: src/app/tests/presentation.rs
assertion_line: 163
expression: "render_help_snapshot(&[(\"ui.presentation\", \"austere\")])"
---
Usage:
  osp [OPTIONS]
Commands:
  help
Options:
  -h, --help
