src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_help_compact.snap
---
source: src/app/tests/presentation.rs
assertion_line: 183
expression: "render_help_snapshot(&[(\"ui.presentation\", \"compact\")])"
---
- Usage ----------
  osp [OPTIONS]
- Commands -------
  help
- Options --------
  -h, --help
