src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_help_expressive.snap
---
source: src/app/tests/presentation.rs
assertion_line: 155
expression: "render_help_snapshot(&[(\"ui.presentation\", \"expressive\")])"
---
- Usage ----------
  osp [OPTIONS]
------------------

- Commands -------
  help
------------------

- Options --------
  -h, --help
------------------
