src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_messages_austere.snap
---
source: src/app/tests/presentation.rs
assertion_line: 179
expression: "render_message_snapshot(&[(\"ui.presentation\", \"austere\")])"
---
error: bad
warning: careful
