src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_messages_compact.snap
---
source: src/app/tests/presentation.rs
assertion_line: 175
expression: "render_message_snapshot(&[(\"ui.presentation\", \"compact\")])"
---
- Errors ---------
- bad

- Warnings -------
- careful
