src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_prompt_austere.snap
---
source: src/app/tests/presentation.rs
assertion_line: 195
expression: "render_prompt_snapshot(&[(\"ui.presentation\", \"austere\")])"
---
default>
