src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_prompt_expressive.snap
---
source: src/app/tests/presentation.rs
assertion_line: 187
expression: "render_prompt_snapshot(&[(\"ui.presentation\", \"expressive\")])"
---
╭─anonymous@local 
╰─default>
