src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_table_austere.snap
---
source: src/app/tests/presentation.rs
assertion_line: 211
expression: "render_table_snapshot(&[(\"ui.presentation\", \"austere\")])"
---
+--------+--------+
| uid    | count  |
+--------+--------+
| alice  | 2      |
| bob    | 15     |
+--------+--------+
