src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_table_compact.snap
---
source: src/app/tests/presentation.rs
assertion_line: 207
expression: "render_table_snapshot(&[(\"ui.presentation\", \"compact\")])"
---
+--------+--------+
| uid    | count  |
+--------+--------+
| alice  | 2      |
| bob    | 15     |
+--------+--------+
