src/app/tests/snapshots/osp_cli__app__tests__presentation__presentation_table_expressive.snap
---
source: src/app/tests/presentation.rs
assertion_line: 203
expression: "render_table_snapshot(&[(\"ui.presentation\", \"expressive\")])"
---
╭━━━━━━━┳━━━━━━━╮
┃ uid   ┃ count ┃
┡━━━━━━━╇━━━━━━━┩
│ alice │ 2     │
│ bob   │ 15    │
╰───────┴───────╯
